# rosi

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  STRUCTURE.md  config.yaml  config_schema.py  main.py  mics.csv  pyproject.toml  rosi  rosi_beamform.py  rosi_beamform_numba.py  rosi_cli.py  rosi_sim.py  rosi_tach.py  rosi_wav.py
.github/workflows/: ci.yml
data/input/: config.yaml  mics.csv
src/rosi/: __init__.py  beamform.py  beamform_numba.py  cli.py  config.py  main.py  rpm.py  tach.py
src/rosi/array/: __init__.py
tests/: test_array_generate.py  test_beamform.py  test_beamform_numba.py  test_cli.py  test_config.py  test_rpm.py  test_sim.py  test_tach.py  test_wav.py
utils/: generate_array.py
