[project]
name = "rosi"
version = "0.1.0"
description = "Rotating Source Identification (ROSI) beamforming"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "joblib>=1.5.3",
    "matplotlib>=3.11.0",
    "numba>=0.65.1",
    "numpy>=2.4.6",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.3",
    "scipy>=1.18.0",
    "tqdm>=4.66.0",
]

[project.scripts]
rosi = "rosi_cli:main"
