[project]
name = "rosi"
version = "0.1.0"
description = "Rotating Source Identification (ROSI) beamforming"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "joblib>=1.5.3",
    "matplotlib>=3.11.0",
    "numba>=0.65.1",
    "numpy>=2.4.6",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.3",
    "scipy>=1.18.0",
    "tqdm>=4.66.0",
]

[project.scripts]
rosi = "rosi.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.11.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rosi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
